packages/website-ue/src/components/Section/index.module.css
.section {
  display: flex;
  justify-content: center;
  padding: var(--space-5);

  .content {
    flex: 1;
    max-width: var(--page-width);

    display: flex;
    flex-direction: column;
    gap: var(--space-5);
  }

  &[data-first="true"] .content {
    padding-top: var(--space-6);
  }
}

